# trading_strategy

./: .gitignore  README.md  STRATEGY_DOCUMENTATION.md  main.py  midcap.py  new_liquidation_sharpe_v3.py  new_liquidation_v2.1.py  niftybees.py  old_liquidation.py  pyproject.toml  test_ce.py
charts/: 1m.py  1v.py  1vm.py  Filter_seperation.ipynb  Momentum_strategy_performance_Yash_v1_timeseriesFilter 3.json  Untitled1.ipynb  compare.py  daily_portfolio_tracking.csv  daily_portfolio_tracking_m1.csv  daily_portfolio_tracking_m3.csv  daily_portfolio_tracking_m4.csv  daily_portfolio_tracking_v1.csv  daily_portfolio_tracking_v3.csv  daily_portfolio_tracking_v4.csv  liq.py  merged_value_momentum.csv  portfolio_timeseries_filter3_12_limit.csv  portfolio_timeseries_filter3_no_limit.csv
data/: 2024-10-03.csv  2024-10-04.csv  20_years_annual_fundamental_data_final.csv  MidCap_and_SmallCap.csv  NIFTYBEES.csv  all_stocks_BV_data_20y.csv  all_stocks_EPS_data_20y.csv  all_stocks_ROE_ROCE_data_20y.csv  all_stocks_TMI.json  all_stocks_revenue_data_20y.csv  check1.json  check10per_removal_only.json  checkROE_div_only.json  check_value10per_removal_only.json  check_valueEGR_div.json  check_valueROE_div.json  check_valueROE_div_updated.json  good_stocks_combined.json  indices-data-v2.csv  least_correlated_indices.json  midcap.csv  momentum.json  momentum_final2014-2026.json  momentum_final_v2.1.json  momentum_final_v2.2.json  momentum_modified_filter4_with_sharpe_10_drop_20_iter.json  momentum_original2014-2026.json  momentum_original_v2.1.json  momentum_original_v2.2.json  tmi.json  (+19 more)
(+469 files in other folders)
