[project]
name = "Exit_Strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.42.60",
    "bs4>=0.0.2",
    "cvxpy>=1.8.1",
    "fastparquet>=2025.12.0",
    "googlesearch-python>=1.3.0",
    "httplib2>=0.31.2",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "langgraph>=1.0.10",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3",
    "pandas-market-calendars>=5.3.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "xlsxwriter>=3.2.9",
    "yfinance>=1.2.0",
]
